First page for test.

--- a/site/index.html
+++ b/site/index.html
@@ -7,8 +7,8 @@
     <title>Resume | Nilesh Patil</title>
 </head>
 <body>
-    <div>
-        <p>open file<a href="/pdf/Resume.pdf">resh</a></p>
-    </div>
+    
+    <img src="/pdf/Resume.jpg" alt="">
+    <!-- <button></button> -->
 </body>
 </html>
