First page for test.

--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <img src="/site/Resume.jpg" alt="">
+    <img src="/Resume.jpg" alt="">
     <!-- <button></button> -->
 </body>
 </html>
